[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["sxy <sxy2001@ruc.edu.cn>"]
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
clap = "2.32.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
failure = "0.1.8"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0"
criterion = "0.3"
rand = "0.6.5"
structopt = "0.3"
log = "0.4.17"
env_logger = "0.10.0"
sled = "0.32"
panic-control = "0.1.4"
crossbeam-utils = "0.6.5"
crossbeam-skiplist = "0.1"
rayon = "1.1"